@@ -127,6 +127,8 @@ x2goclient (4.1.0.1-0x2go1) UNRELEASED; urgency=medium
     - res/i18n/x2goclient_fi.ts: remove outdated comment.
     - src/sshprocess.cpp: bind direct tunnel socket to localhost instead of
       any address. Fixes: #31.
+    - src/onmainwindow.cpp: check for sessionExplorer->getLastSession() to be
+      valid in all places but obvious ones. Fixes: #499.
 
   [ Oleksandr Shneyder ]
   * New upstream version (4.1.0.1):
